adjusted position on .vetnav to fix left-alignment issue

--- a/src/sass/modules/_m-vet-nav.scss
+++ b/src/sass/modules/_m-vet-nav.scss
@@ -14,7 +14,7 @@ body.va-pos-fixed {
   // shouldn't affect anything. However, it's here to show how the height is offset by the
   // vertical positioning.
   top: $height-offset;
-  left: -0.9375rem;
+  left: -0.9rem;
   overflow-y: scroll;
   position: absolute;
   width: 100%;
